Break up combine command functions even further